#11164 - 개인현황판 스크롤 디자인적용
개인현황판 화면 스크롤 디자인 적용하였습니다.(문서함의 스크롤바 참조하였습니다.)

--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -108,7 +108,7 @@
                 } else {
                     document.getElementById('tokenList').innerHTML = response.responseText;
                     setDateTimeFormat(document.getElementById('tokenList'));
-                    /*OverlayScrollbars(document.querySelector('.scroll-wrap'), {
+                    OverlayScrollbars(document.querySelector('.z-page-content'), {
                         className: 'scrollbar',
                         callbacks: {
                             onScroll: function (e) {
@@ -122,7 +122,7 @@
                                 }
                             }
                         }
-                    });*/
+                    });
                 }
             }
         };
