i-plus의 배경색 지정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2628,6 +2628,10 @@ select {
   border-bottom-right-radius: 0;
 }
 
+.z-button-icon .z-icon.i-plus {
+  background: #000000;
+}
+
 /* _layout.scss
  *
  * 파일 경로 : template/_layout.scss
