--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2763,7 +2763,6 @@ select {
 }
 .z-itsm-container .z-main-content .z-page-result .z-document-color {
   width: 0.75rem;
-  margin: 0.05rem;
 }
 .z-itsm-container .z-main-content .z-page-result .z-document-row {
   padding: 1.875rem 3rem;
@@ -2977,7 +2976,7 @@ select {
   cursor: pointer;
 }
 .z-itsm-container .z-main-content .card-list .card:hover {
-  box-shadow: 0 0 0.9375rem rgba(207, 213, 217, 0.15), inset 0 0 0 0.0625rem #CFD5D9;
+  box-shadow: 0 0 0 0.0625rem #CFD5D9;
 }
 .z-itsm-container .z-main-content .card-list .card .document-column h3 {
   width: 28rem;
