--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -122,7 +122,7 @@ $card-content-bg-color:                       $white;
 $card-border-width:                           0.0625rem; // 1px
 $card-border-color:                           $gray300;
 $card-border-radius:                          0.0625rem; // 1px
-$card-hover-box-shadow:                       0 0 0.9375rem hexToRGBA($gray300, 0.15), inset 0 0 0 $card-border-width $card-border-color;
+$card-hover-box-shadow:                       0 0 0 $card-border-width $card-border-color;
 
 // 카드 목록 마우스 오버시
 $card-list-hover-bg-color:                    $neutral200;
