#11113 파일업로드 여러개 생성시 버그

--- a/src/main/resources/public/template/board/boardArticlesEdit.html
+++ b/src/main/resources/public/template/board/boardArticlesEdit.html
@@ -122,7 +122,7 @@
             if (!replyYn) {
                 ownId = boardId;
             }
-            zFileUploader.init({extra: {formId: 'boardForm', ownId: ownId, dropZoneMaxFileSize: attachFileSize}});
+            zFileUploader.init({formId: 'boardForm', ownId: ownId, dropZoneMaxFileSize: attachFileSize});
         } else {
             document.getElementById('divFile').style.display = 'none';
         }
@@ -198,7 +198,7 @@
         if (data.attachYn && divFile.style.display === 'none') {
             document.getElementById('divFile').style.display = '';
             if (document.getElementById('dropZoneFileUpload') === null) {
-                zFileUploader.init({extra: {formId: 'boardForm', ownId: boardId, dropZoneMaxFileSize: attachFileSize}});
+                zFileUploader.init({formId: 'boardForm', ownId: boardId, dropZoneMaxFileSize: attachFileSize});
             }
         } else if (!data.attachYn && divFile.style.display === '') {
             document.getElementById('divFile').style.display = 'none';
