--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -98,7 +98,7 @@
         window.onload = function () {
             boardCreateDt.textContent = i18n.userDateTime(boardCreateDt.textContent);
             if (attachYn) {
-                zFileUploader.init({extra: {formId: 'frm', ownId: boardId, editor: false, isView: true}});
+                zFileUploader.init({formId: 'frm', ownId: boardId, editor: false, isView: true});
             }
             if (boardId !== null && commentYn) {
                 getBoardCommentList();
