--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -60,7 +60,7 @@
                 aliceAlert.alertWarning(i18n.msg('common.msg.delete'));
                 return history.go(-1);
             }
-            zFileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true, defaultUrl: '/rest/portals', isHeaders : false}});
+            zFileUploader.init({formId: 'frm', ownId: noticeNo, editor: false, isView: true, defaultUrl: '/rest/portals', isHeaders : false});
             OverlayScrollbars(document.querySelector('.z-main'), { className: 'scrollbar' });
         }
         /* ]]> */
