--- a/src/main/resources/public/template/sample/fileUploader.html
+++ b/src/main/resources/public/template/sample/fileUploader.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" th:src="@{/assets/js/lib/zFileuploader.js}" th:inline="javascript"></script>
     <script th:inline="javascript">
         window.onload = function() {
-            zFileUploader.init({extra: {formId: 'mainFrm', task: 'Test'}});
+            zFileUploader.init({formId: 'mainFrm', task: 'Test'});
             document.getElementById('action').addEventListener('click', function () {
                 const opt = {
                     method: 'post',
