추가 작성한 부분 제외 -> class명 추가

--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -51,7 +51,7 @@
         <div class="z-edit-row flex-column flex-fill">
             <div class="flex-row justify-content-between">
                 <label class="required" th:text="#{cmdb.class.label.attributeList}"></label>
-                <button type="button" class="z-button-icon float-right"
+                <button type="button" class="z-button-icon extra float-right"
                         onclick="openClassAttributeListModal()">
                     <span class="z-icon i-plus"></span>
                 </button>
