--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="flex-column z-edit-row">
-            <h3 class="sub-title under-bar bold" th:text="#{user.label.role}"></h3>
+            <h3 class="sub-title under-bar bold required" th:text="#{user.label.role}"></h3>
         </div>
         <div class="flex-column z-edit-row">
             <div class="z-checkbox-list">
@@ -292,6 +292,7 @@
         if (isEmpty('userName', 'user.msg.enterUserName')) return false;
         if (isEmpty('email', 'user.msg.enterUserEmail')) return false;
         if (!isValidEmail('email', true)) return false;
+        if (!isChecked('roles', 'user.msg.selectRole')) return false;
         return true;
     }
 
