#11169 - 게시판 읽기에서 textarea 사이즈 조정 버튼 삭제.
_scrollbars.scss 에서 게시판 읽기에만 있는 클래스 .ql-disabled를 이용해 사이즈 고정을 시켰습니다. (우다정과장님이 도와주심)

--- a/src/main/resources/public/scss/template/_scrollbars.scss
+++ b/src/main/resources/public/scss/template/_scrollbars.scss
@@ -329,4 +329,12 @@
       @include backgroundImage('#{$icon-folder-path}icon_resize.svg', 12px, no-repeat, 0, 0, null);
     }
   }
+
+  //게시판 읽기 textarea고정
+  &.ql-disabled{
+    .ql-editor{
+      resize:none;
+    }
+  }
 }
+
