#11169 - 게시판 읽기에서 textarea 사이즈 조정 버튼 삭제.
_scrollbars.scss 에서 게시판 읽기에만 있는 클래스 .ql-disabled를 이용해 사이즈 고정을 시켰습니다. (우다정과장님이 도와주심)

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3646,6 +3646,9 @@ table tbody tr:hover {
   background-position-x: 0;
   background-position-y: 0;
 }
+.ql-container.ql-disabled .ql-editor {
+  resize: none;
+}
 
 /* _file-uploader.scss 
  *
