#11173 - 이미지 관리 레이아웃 조정

--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -61,7 +61,7 @@
             });
         });
         // 스크롤바 표시
-        OverlayScrollbars(document.querySelector('.z-main'), {
+        OverlayScrollbars(document.querySelector('.z-page-content'), {
             className: 'scrollbar',
             callbacks: {
                 onScroll: function (e) {
