#11174 - 사용자 리스트 화면 페이징 정보 누락
팀장님의 도움으로 search 페이지와 list 페이지 간 연결이 되어 정보를 공유하고 있음을 알았고, 수정 후 조회를 해보았는데 (작성일시순)은 사용자와 맞지 않아, (이름순)으로 변경 후 커밋

--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -43,5 +43,6 @@
         </tr>
     </tbody>
 </table>
+<th:block th:insert="layout/itsm/fragment/totalCountFragment :: totalCountDataFragment"></th:block>
 </body>
 </html>
