--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3755,40 +3755,55 @@ table tbody tr:hover {
   margin: 0.5625rem 0 0.5625rem 0;
 }
 .file-uploader-edit .dropzone {
-  min-height: 6.25rem;
+  min-height: 4.5rem;
   background-color: #FFFFFF;
-  border: 0.0625rem solid #CFD5D9;
-  padding: 0.625rem 0.625rem 0 0.625rem;
-}
-.file-uploader-edit .dropzone .dz-default {
-  margin: 1.875rem 0;
 }
 .file-uploader-edit .dropzone .dz-default.dz-message {
+  display: grid;
+  grid-template-columns: 3.75rem 15.25rem 10rem auto;
+  min-width: 100%;
+  max-width: 100%;
+  height: 4.5rem;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  align-items: center;
   font-size: 0.875rem;
   font-weight: 400;
-  color: #ABB0B5;
-  text-align: center;
 }
-.file-uploader-edit .dropzone .dz-default.dz-message .z-icon.i-document-txt {
+.file-uploader-edit .dropzone .dz-default.dz-message .z-icon.i-upload {
   display: block;
-  height: 2.813rem;
   width: 100%;
   height: 2.813rem;
-  -webkit-mask-image: url("../media/icons/fileUploader/icon_document_txt.svg");
-  mask-image: url("../media/icons/fileUploader/icon_document_txt.svg");
+  -webkit-mask-image: url("../media/icons/fileUploader/icon_upload.svg");
+  mask-image: url("../media/icons/fileUploader/icon_upload.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #ABB0B5;
-  margin-bottom: 1.25rem;
-}
-.file-uploader-edit .dropzone .dz-default.dz-message .add-file-button-wrap {
-  margin-top: 0.5rem;
+  background: #8B9094;
 }
 .file-uploader-edit .dropzone .dz-default.dz-message .add-file-button-wrap .dz-clickable {
   color: #339AF0;
   cursor: pointer;
+}
+.file-uploader-edit .dropzone .dz-default.dz-message:hover {
+  outline: 0;
+  border-color: #339AF0;
+  background-color: #E3F5FC;
+}
+.file-uploader-edit .dropzone .dz-default.dz-message:focus, .file-uploader-edit .dropzone .dz-default.dz-message:active {
+  outline: 0;
+  border-color: #2578CE;
+  color: #1959AC;
+  background-color: #ADE6FD;
+}
+.file-uploader-edit .dropzone .dz-default.dz-message:focus .z-icon.i-upload, .file-uploader-edit .dropzone .dz-default.dz-message:active .z-icon.i-upload {
+  background-color: #1959AC;
+}
+.file-uploader-edit .dropzone .dz-default.dz-message:focus .add-file-button-wrap .dz-clickable, .file-uploader-edit .dropzone .dz-default.dz-message:active .add-file-button-wrap .dz-clickable {
+  color: #1959AC;
 }
 .file-uploader-edit .dropzone .dz-default.dz-drag-hover {
   border-style: solid;
@@ -3798,14 +3813,21 @@ table tbody tr:hover {
 }
 .file-uploader-edit .dropzone .dz-preview {
   position: relative;
-  height: 5rem;
+  height: 4.5rem;
   background-color: #FFFFFF;
   border: 0.0625rem solid #CFD5D9;
-  padding: 1rem 1.25rem 0.5rem 1.25rem;
-  margin-bottom: 0.625rem;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  padding: 0.75rem 1rem 0.5rem 0.75rem;
+  margin-top: 0.25rem;
   vertical-align: top;
+  font-size: 0.875rem;
 }
 .file-uploader-edit .dropzone .dz-preview:hover {
+  outline: 0;
+  border-color: #339AF0;
+  background-color: #E3F5FC;
   z-index: 25;
 }
 .file-uploader-edit .dropzone .dz-preview:hover .dz-details {
@@ -3822,6 +3844,12 @@ table tbody tr:hover {
   -o-filter: blur(8px);
   -ms-filter: blur(8px);
   filter: blur(8px);
+}
+.file-uploader-edit .dropzone .dz-preview:focus, .file-uploader-edit .dropzone .dz-preview:active {
+  outline: 0;
+  border-color: #2578CE;
+  color: #1959AC;
+  background-color: #ADE6FD;
 }
 .file-uploader-edit .dropzone .dz-preview.dz-file-preview .dz-image {
   border-radius: 1.25rem;
@@ -3845,7 +3873,7 @@ table tbody tr:hover {
 }
 .file-uploader-edit .dropzone .dz-preview .dz-details {
   display: grid;
-  grid-template-columns: 2.563rem auto 1.25rem 1.25rem 1.125rem;
+  grid-template-columns: 2.563rem auto 1.5rem 0.5rem 1.5rem;
   min-width: 100%;
   max-width: 100%;
   align-items: center;
@@ -3864,7 +3892,7 @@ table tbody tr:hover {
 .file-uploader-edit .dropzone .dz-preview .dz-details .dz-filename {
   grid-column: 2;
   color: #222529;
-  padding: 0 1.25rem;
+  padding: 0 0.75rem;
   text-align: left;
   display: inline-block;
   max-width: 100%;
@@ -3877,9 +3905,9 @@ table tbody tr:hover {
   grid-column: 2;
   color: #ABB0B5;
   text-align: left;
-  padding: 0 1.25rem;
+  padding: 0 0.75rem;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-download {
+.file-uploader-edit .dropzone .dz-preview .dz-remove {
   display: block;
   height: 100%;
   grid-column: 3;
@@ -3888,13 +3916,16 @@ table tbody tr:hover {
   text-align: center;
   cursor: pointer;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon {
+.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon {
   background: #8B9094;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon.i-download {
+.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon:hover {
+  background: #339AF0;
+}
+.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon.i-delete {
   height: 3rem;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-remove {
+.file-uploader-edit .dropzone .dz-preview .dz-download {
   display: block;
   height: 100%;
   grid-column: 5;
@@ -3903,10 +3934,13 @@ table tbody tr:hover {
   text-align: center;
   cursor: pointer;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon {
+.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon {
   background: #8B9094;
 }
-.file-uploader-edit .dropzone .dz-preview .dz-remove .z-icon.i-delete {
+.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon:hover {
+  background: #339AF0;
+}
+.file-uploader-edit .dropzone .dz-preview .dz-download .z-icon.i-download {
   height: 3rem;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-image {
@@ -4054,7 +4088,7 @@ table tbody tr:hover {
 .file-uploader-edit.disabled {
   pointer-events: none;
 }
-.file-uploader-edit.disabled .dropzone {
+.file-uploader-edit.disabled .dropzone .dz-default {
   background-color: #EEEEEE;
   border: 0.0625rem solid #CFD5D9;
 }
@@ -4066,7 +4100,7 @@ table tbody tr:hover {
   border: 0.0625rem solid #CFD5D9;
 }
 .file-uploader-edit.disabled .dropzone .dz-preview .dz-details .dz-file-type {
-  filter: grayscale(1);
+  background: #ABB0B5;
 }
 .file-uploader-edit.disabled .dropzone .dz-preview .dz-details .dz-download .z-icon,
 .file-uploader-edit.disabled .dropzone .dz-preview .dz-details .dz-remove .z-icon {
