--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -272,6 +272,7 @@ input, textarea, select {
 
     .z-button-search {
       margin-left: -0.0625rem;
+      @include borderRadius(0.25rem);
 
       &:focus,
       &:hover,
