#11105 [보고서] 다운로드 기능 구현 1. html2pdf.js 모듈 사용으로 구현 2. report 화면도 chart처럼 공통 js 파일 사용하도록 수정

--- a/src/main/resources/public/assets/css/report.css
+++ b/src/main/resources/public/assets/css/report.css
@@ -893,6 +893,13 @@ input, button, select, optgroup, textarea {
   margin: 0 auto;
 }
 
+.z-report-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 120rem;
+  margin: 0.5cm auto;
+}
+
 /* _preview.scss
  *
  * 파일 경로 : report/_preview.scss
@@ -910,7 +917,7 @@ input, button, select, optgroup, textarea {
   font-weight: bold;
 }
 .z-report .z-report-main .z-report-area .z-drawing-board {
-  width: 62.5rem;
+  width: 45.625rem;
 }
 .z-report .z-report-main .z-report-area .z-drawing-board .z-chart-content {
   margin: 0 0 1.25rem 0;
