--- a/src/main/resources/public/scss/report/_preview.scss
+++ b/src/main/resources/public/scss/report/_preview.scss
@@ -16,7 +16,7 @@
         }
         .z-report-area {
             .z-drawing-board {
-                width: 62.5rem; // 1000px; 임시
+                width: 45.625rem; // 730px
                 .z-chart-content {
                     margin: 0 0 1.25rem 0; // 20px
                     .z-title {
