--- a/src/main/resources/public/scss/report/_variables.scss
+++ b/src/main/resources/public/scss/report/_variables.scss
@@ -3,7 +3,7 @@
 $layout-header-height:                        0; // 0px
 
 // main
-$layout-main-bg-color:                        $neutral50);
+$layout-main-bg-color:                        $neutral50;
 
 // main > drawing-report
 $drawing-report-width:                        60rem; // 960px
