--- a/src/main/resources/public/template/report/fragments/reportHead.html
+++ b/src/main/resources/public/template/report/fragments/reportHead.html
@@ -20,6 +20,8 @@
     <script th:src="@{/assets/vendors/highCharts/modules/exporting.js}"></script>
     <script th:src="@{/assets/vendors/highCharts/modules/solid-gauge.js}"></script>
     <script th:src="@{/assets/vendors/highCharts/plugin/pattern-fill-v2.js}"></script>
+    <script th:src="@{/assets/vendors/html2pdf/html2pdf.bundle.min.js}"></script>
+    <script th:src="@{/assets/js/chart/zChart.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         // TODO: 모듈로 변경 필요
