--- a/src/main/resources/public/template/report/reportSearch.html
+++ b/src/main/resources/public/template/report/reportSearch.html
@@ -66,8 +66,8 @@
         });
     }
 
-    function download() {
-        console.log('DOWNLOAD')
+    function download(reportId) {
+        window.open('/reports/report/' + reportId + '/view', '_blank');
     }
     /*]]>*/
 </script>
