--- a/src/main/resources/public/scss/report/_layout.scss
+++ b/src/main/resources/public/scss/report/_layout.scss
@@ -1,1 +1,8 @@
 @import '../template/_layout.scss';
+
+.z-report-wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 120rem;
+    margin: 0.5cm auto;
+}
