--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -122,7 +122,10 @@
         </label>
     </div>
     <div class="flex-column z-edit-row">
-        <label th:text="#{board.label.attachFileSize}" for="attachFileSize"></label>
+        <label for="attachFileSize">
+            <span th:text="#{board.label.attachFileSize}"></span>
+            <span class="required"></span>
+        </label>
         <input class="z-input col-6 i-mb" id="attachFileSize" name="attachFileSize" type="text"
                th:value="${boardAdmin?.attachFileSize}" maxlength="4"
                onKeyup="this.value=this.value.replace(/[^0-9]/g,'');"/>
