--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -303,7 +303,9 @@ $dropzone-clickable-font-color:              $blue500;
 $file-uploader-preview-height:               4.5rem; // 72px
 $file-uploader-preview-radius:               0.0625rem; // 1px
 $file-uploader-progress-color:               $blue500;
-$file-uploader-progress-bg-color:            $gray300;
+$file-uploader-progress-bg-color:            inherit;
+$file-uploader-progress-font-color:          $gray400;
+$file-uploader-progress-font-size:           0.6875rem; // 11px
 $file-uploader-filename-font-color:          $gray800;
 $file-uploader-filesize-font-color:          $gray400;
 $file-uploader-font-size:                    $font-size-xs;
