#11172 커스텀코드 조건 검색시 에러 1. 검색조건의 SelectBox 변경시 에러 발생 수정

--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -37,7 +37,7 @@
     window.onload = function() {
         document.getElementById('searchValue').focus();
         document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
-        document.getElementById('searchType').addEventListener('change', getList.bind(null), false);
+        document.getElementById('searchType').addEventListener('change', function () { getList(); });
         getList();
     };
 
