#11237 [ 문서번호 ] 문서 번호 검색 기능 오류 1. 문서번호 검색시 오류 현상 수정 2. 문서번호, 패턴 메뉴의 검색시 화면 깜빡거림 현상 수정

--- a/src/main/resources/public/template/numbering-rule/numberingRuleSearch.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleSearch.html
@@ -29,7 +29,7 @@
     window.onload = function () {
         document.getElementById('searchValue').focus();
         document.getElementById('searchValue').addEventListener('keyup', function () {
-            getList(false);
+            getList();
         });
         getList();
     };
@@ -43,6 +43,7 @@
         const opt = {
             method: 'get',
             url: '/numberingRules?' + urlParam,
+            showProgressbar: false,
             callbackFunc: function (response) {
                 document.getElementById('ruleList').innerHTML = response.responseText;
                 OverlayScrollbars(document.querySelector('.z-list-body'), {
